Fix new classes overlapping header menu on mobile

--- a/wp-content/themes/salsa-siempre/scss/_header.scss
+++ b/wp-content/themes/salsa-siempre/scss/_header.scss
@@ -5,7 +5,7 @@
 }
 
 .header-inner {
-	z-index: 0;
+	z-index: 1;
 	font-size: 2em;
 	position: relative;
 	max-width: 1170px;
